--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,9 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
   logging.level:
     org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
+#    org.hibernate.orm.jdbc.bind: trace
   #  org.hibernate.type: trace #스프링 부트 2.x, hibernate5
-  #  org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
+    org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
